# kafka

clients/cpp/: Makefile.am
clients/cpp/src/: consumer.cpp  consumer.hpp  encoder_consumer.hpp  encoder_consumer_helper.hpp  encoder_producer_helper.hpp  kafka-consumer.cpp  kafka-producer.cpp
clients/ruby/lib/kafka/: consumer.rb
